--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
                     família, mudando o destino de todos.</p>
             <div class="botoes">
                 <button role="button" class="botao">
+                    <i class="fas fa-play"></i>
                     ASSISTIR AGORA
                 </button>
                 <button role="button" class="botao">
+                    <i class="fas fa-info-circle"></i>
                     MAIS INFORAÇÕES
                 </button>
             </div>
@@ -42,6 +44,8 @@
             
         </div>
     </main>
+
+    <script src="https://kit.fontawesome.com/d46afcc2ee.js" crossorigin="anonymous"></script>
 </body>
 
 
