--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <!--owl css-->
     <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
     <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
+
+    <!--responsive-->
+    <link rel="stylesheet" href="style/responsive.css">
 </head>
 
 <body>
