--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </button>
                 <button role="button" class="botao">
                     <i class="fas fa-info-circle"></i>
-                    MAIS INFORAÇÕES
+                    MAIS INFORMAÇÕES
                 </button>
             </div>
 
